third_party/move/move-compiler/tests/move_check/borrows/borrowed_before_last_usage.move
script {
fun main() {
    let x = 0;
    let r = &x;
    let y = x;
    assert!(*r == y, 0);
}
}
